objects/InvoiceLineItem__c.object
<CustomObject>
    <description>&lt;ILI&gt; Capturing Invoice Line items for Tax invoices for billing requests</description>
    <fields>
        <fullName>AmountExclGST__c</fullName>
        <label>Amount (Excl GST)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>InvoiceLineItems</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSTAmount__c</fullName>
        <label>GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{00000}</displayFormat>
        <label>Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InvoiceLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>